# nrf54_2_4ghz_radio_data_stream

./: CMakeLists.txt  Kconfig.sysbuild  README.md  README.rst  prj.conf  sample.yaml
boards/: nrf54l15dk_nrf54l10_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay
client/: client_central.py  client_uart.py  pyproject.toml
include/: conn_time_sync.h
src/: central.c  controller_time_nrf54.c  esb_link.c  main.c  peripheral.c  raw_radio_common.c  timed_led_toggle.c
